# Plugins

CPP_Plugin/: CMakeLists.txt  CPP_Plugin_global.h  cpp_plugin.cpp  cpp_plugin.h
MultiplePluginsExample/MyMultiplePlugins/: MyMultiplePlugins.pro  main.cpp  main.qml  pluginlistmodel.cpp  pluginlistmodel.h  plugins.json  qml.qrc
MultiplePluginsExample/MyMultiplePlugins/AllPlugins/Plugin1/: Plugin1.pro  camera.cpp  camera.h  plugin1_plugin.cpp  plugin1_plugin.h  qmldir
MultiplePluginsExample/MyMultiplePlugins/AllPlugins/Plugin2/: Plugin2.pro  plugin2_plugin.cpp  plugin2_plugin.h  qmldir  settings.cpp  settings.h
MultiplePluginsExample/MyMultiplePlugins/AllPlugins/Plugin3/: Plugin3.pro  maps.cpp  maps.h  plugin3_plugin.cpp  plugin3_plugin.h  qmldir
MultiplePluginsExample/MyMultiplePlugins/AllPlugins/Plugin4/: Plugin4.pro  plugin4_plugin.cpp  plugin4_plugin.h  youtube.cpp  youtube.h
MultiplePluginsExample/MyMultiplePlugins/AllPlugins/Plugin5/: Plugin5.pro  music.cpp  music.h  plugin5_plugin.cpp  plugin5_plugin.h  qmldir
MultiplePluginsExample/MyMultiplePlugins/AllPlugins/Plugin6/: Plugin6.pro  chrome.cpp  chrome.h  plugin6_plugin.cpp  plugin6_plugin.h  qmldir
MultiplePluginsExample/MyMultiplePlugins/PluginsURI/com/mycompany/youtube/: qmldir
MyQtQmlPlugin/MyApp/: main.cpp  main.qml
MyQtQmlPlugin/MyRectangle/: MyRectangle.pro  myitem.cpp  myitem.h  myrectangle_plugin.cpp  myrectangle_plugin.h  qmldir
PluginCMakeShared/MyApp/: CMakeLists.txt  main.cpp  main.qml
PluginCMakeShared/Plugin/: CMakeLists.txt  GirishControls.qml  girish.cpp  girish.h  qmldir
Plugin_CMake/MyPlugin/: CMakeLists.txt  GreeterControls.qml  greeter.cpp  greeter.h  qmldir
Plugin_Pro/MyApp/: MyApp.pro  main.cpp  main.qml
Plugin_Pro/MyPlugin/: MyPlugin.pro  myitem.cpp  myitem.h  myplugin_plugin.cpp  myplugin_plugin.h
Plugin_Pro/cplugin/: MyItemControls.qml  cplugin.pro  cplugin_plugin.cpp  cplugin_plugin.h  main.qml  qmldir
